Fix issue where resource header was being overlapped by buttons and icons

--- a/styles/modules/Resource.module.scss
+++ b/styles/modules/Resource.module.scss
@@ -36,6 +36,7 @@
   padding: 1rem 2rem;
   position: sticky;
   top: 0;
+  z-index: 1;
 
   @include tabletAndLarger {
     flex-direction: row;
